Fix z-index

--- a/css/partials/sidebar.css
+++ b/css/partials/sidebar.css
@@ -59,7 +59,7 @@
 }
 
 .bk-sidebar-detached {
-  @apply fixed top-0 left-0 bg-white z-sidebar rounded-md shadow-md flex flex-col overflow-hidden;
+  @apply fixed top-0 left-0 bg-white z-sidebar-detached rounded-md shadow-md flex flex-col overflow-hidden;
   @apply border border-slate-400;
   &.bk-is-focused {
     @apply shadow-xl;
